# cintel-03-signal-design

./: CITATION.cff  LICENSE  README.md  pyproject.toml  zensical.toml
artifacts/: signals_brandon.csv
docs/: index.md  project-instructions.md  your-files.md
src/cintel/: signal_design_brandon.py
