# ============================================================
# pyproject.toml (Python project configuration)
# ============================================================

[project]
name = "cintel"
readme = "README.md"
requires-python = ">=3.14"
version = "0.1.0"
description = "Signal design pipeline for system metrics"

dependencies = [
    "datafun-toolkit",
    "polars[rtcompat]",
]

[project.optional-dependencies]
dev = [
    "packaging",
    "pre-commit",
    "ruff",
    "validate-pyproject",
]

docs = [
    "mkdocstrings[python]",
    "zensical",
]

[project.urls]
Homepage = "https://github.com/brandonjbbb/cintel-03-signal-design"
Repository = "https://github.com/brandonjbbb/cintel-03-signal-design"
Documentation = "https://brandonjbbb.github.io/cintel-03-signal-design"

[tool.ruff]
exclude = [
    ".eggs",
    "*.egg-info",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "site",
]
line-length = 88
preview = false
target-version = "py313"
unsafe-fixes = false

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "preserve"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B",
    "PTH",
]
ignore = [
    "E501",
]

[tool.ruff.lint.isort]
force-sort-within-sections = false

[tool.ruff.lint.per-file-ignores]
"src/**/__init__.py" = ["F401"]
"src/**/_version.py" = ["ALL"]
"notebooks/**/*.ipynb" = ["F821"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=80.9.0"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
